--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,9 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Ms+Madi&family=Raleway:ital,wght@0,200;0,300;0,400;0,500;0,600;1,100&family=Roboto+Slab:wght@300;400;500;700&display=swap"
       rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <title>K's DevBlog</title>
   </head>
