--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,18 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+<style>
+  *{
+    margin: 0;
+  }
+</style>
+
+<style>
+  .link{
+    text-decoration:none;
+    color:inherit
+  }
+</style>
 
     <title>K's DevBlog</title>
   </head>
